tests/baselines/reference/nodeModulesExportAssignments(module=node18).errors.txt
index.ts(3,1): error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.


==== subfolder/index.ts (0 errors) ====
    // cjs format file
    const a = {};
    export = a;
==== index.ts (1 errors) ====
    // esm format file
    const a = {};
    export = a;
    ~~~~~~~~~~~
!!! error TS1203: Export assignment cannot be used when targeting ECMAScript modules. Consider using 'export default' or another module format instead.
==== package.json (0 errors) ====
    {
        "name": "package",
        "private": true,
        "type": "module"
    }
==== subfolder/package.json (0 errors) ====
    {
        "type": "commonjs"
    }